<resources>
    <string name="app_name">RetailStudios</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- splash -->
    <string name="app_title">RetailStudio</string>

    <!-- login -->
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="button_lbl_login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="lbl_forgetPassword">Forget Password?</string>

    <!-- register -->
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u>Terms &amp; Condition</u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>

    <string name="err_msg_enter_first_name">Please enter first name</string>
    <string name="err_msg_enter_last_name">Please enter last name</string>
    <string name="err_msg_enter_email">Please enter email</string>
    <string name="err_msg_enter_password">Please enter password</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition</string>
    <string name="registering_successful">Thanks for registering!</string>

    <!-- progress bar -->
    <string name="please_wait">Please Wait&#8230;</string>

    <!-- forgot password -->
    <string name="title_forgot_password">FORGOT PASSWORD</string>
    <string name="forgot_password_title_description">Enter your username and email adddress we will send you a email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>

    <string name="email_sent_success">Email sent successfully to reset your password</string>
    <string name="register_success">You are registered successfully</string>

    <!-- user profile -->
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failed">Image selection Failed!</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number</string>
    <string name="msg_profile_update_success">Your profile is updated successfully</string>

    <!--<string name="title_activity_dashboard">MainActivity</string>-->
    <string name="title_products">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">Orders</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="action_settings">Settings</string>

    <!-- settings -->
    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="content_description">image</string>
    <string name="action_add_product">Add Product</string>

    <!-- add product -->
    <string name="title_add_product">ADD PRODUCT</string>
    <string name="et_hint_product_title">Product Title</string>
    <string name="et_hint_product_price">Product Price ($)</string>
    <string name="et_hint_product_description">Product Description</string>
    <string name="et_hint_product_quantity">Product Quantity</string>

    <string name="err_msg_select_product_image">Please select product image</string>
    <string name="err_msg_enter_product_title">Please enter product title</string>
    <string name="err_msg_enter_product_price">Please enter product price</string>
    <string name="err_msg_enter_product_description">Please enter product description</string>
    <string name="err_msg_enter_product_quantity">Please enter product quantity</string>
    <string name="product_uploaded_success_message">Your product was uploaded successfully</string>
    <string name="no_product_added_yet">No products added yet!</string>

    <string name="no_dashboard_item_found">No items found</string>
</resources>